@@ -94,7 +94,7 @@ void DNSProxy::onlyFrom(const string &ips)
 
 bool DNSProxy::recurseFor(DNSPacket* p)
 {
-  return d_ng.empty() || d_ng.match((struct sockaddr_in *)&p->remote);
+  return d_ng.match((struct sockaddr_in *)&p->remote);
 }
 
 /** returns false if p->remote is not allowed to recurse via us */
