@@ -45,7 +45,6 @@ bool chopOff(string &domain);
 bool endsOn(const string &domain, const string &suffix);
 string nowTime();
 const string unquotify(const string &item);
-int matchNetmask(const char *address, const char *omask);
 string humanDuration(time_t passed);
 void chomp(string &line, const string &delim);
 bool stripDomainSuffix(string *qname, const string &domain);
